--- a/css/style.css
+++ b/css/style.css
@@ -449,6 +449,36 @@ footer .icon {
 		justify-self: center;
 		align-self: center;
 	}
+	/* Mates */
+	.contenedor-mates {
+		flex-direction: column;
+		height: 42rem;
+	}
+
+	.contenedor-mates h2 {
+		padding: 3rem;
+		font-size: 6.5rem;
+		width: 100%;
+		height: 30%;
+	}
+
+	.contenedor-mates img {
+		width: 100%;
+		height: 70%;
+		object-fit:cover;
+	}
+
+	.card-desc {
+		font-size: 1.75rem;
+	}
+
+	.card {
+		height: 15rem;
+	}
+
+	.card img {
+		width: 15rem;
+	}
 }
 
 @media (max-width:833px) {
@@ -475,6 +505,33 @@ footer .icon {
 	footer .redes {
 		gap: 10px;
 	}
+
+	/* Mates */
+
+	.contenedor-mates {
+		height: 100%;
+	}
+
+	.contenedor-mates h2 {
+		font-size: 5.5rem;
+	}
+
+	.contenedor-mates img {
+		object-fit:scale-down;
+	}
+
+	.card-desc {
+		font-size: 1.25rem;
+	}
+
+	.card {
+		height: 12rem;
+	}
+
+	.card img {
+		width: 12rem;
+	}
+
 }
 
 @media (max-width:700px) {
@@ -534,6 +591,37 @@ footer .icon {
 		width: 1.5rem;
 		height: 1.5rem;
 	}
+
+	/* Mates */
+	.contenedor-mates {
+		margin-top: 10rem;
+	}
+
+	.contenedor-mates h2 {
+		display: none;
+	}
+	
+	.cards {
+		height: 100%;
+	}
+
+	.card {
+		flex-direction: column-reverse;
+		height: 100%;
+		gap: 1.25rem;
+	}
+
+	.card img {
+		width: 15rem;
+		height: 15rem;
+		align-self: center;
+		justify-self: center;
+	}
+
+	.card-desc {
+		margin-top: 0rem;
+		margin-left: 0rem;
+	}
 }
 
 @media (max-width:555px) {
@@ -550,6 +638,23 @@ footer .icon {
 	.contenedor-info-2 div h2 {
 		padding: 1.5rem;
 	}
+
+	/* Mates */
+
+	.cards {
+		padding: 4rem;
+	}
+
+	.card img {
+		width: 12rem;
+		height: 12rem;
+	}
+
+	.card-desc {
+		margin-top: 2rem;
+		margin-left: 2rem;
+		font-size: 1rem;
+	}
 }
 
 @media (max-width:490px) {
@@ -562,12 +667,22 @@ footer .icon {
 		object-fit: scale-down;
 	}
 
+	/* Mates */
+	.card-desc {
+		margin-top: 0.5rem;
+		margin-left: 0.5rem;
+	}
 }
 
 @media (max-width:475px) {
 
 	.contenedor-info-2 div h2 {
 		padding: 1rem;
+	}
+
+	/* Mates */
+	.cards {
+		padding: 3rem;
 	}
 }
 
