Pasaje de CSS a SCSS, parte 2

--- a/css/style.css
+++ b/css/style.css
@@ -277,3 +277,195 @@ footer {
       color: #c67b48; }
     .card .card-desc ul {
       margin-left: 2.5rem; }
+
+/* Breakpoint para "notebooks", Inicio */
+@media (max-width: 1221px) {
+  .contenedor-info-2 div h2 {
+    font-size: 3.5rem; } }
+
+@media (max-width: 1024px) {
+  .navbar {
+    font-size: 1.5rem; }
+  .portada p {
+    font-size: 7rem;
+    text-shadow: black 5px 5px 5px;
+    color: #d3b59e; }
+  .contenedor-info h1 {
+    font-size: 7rem; }
+  .contenedor-info h2 {
+    font-size: 2.5rem; }
+  .contenedor-info-2 {
+    height: 43.75rem; }
+    .contenedor-info-2 div {
+      flex-direction: column; }
+      .contenedor-info-2 div h2 {
+        font-size: 2.5rem;
+        padding: 2rem;
+        width: 100%;
+        height: 30%; }
+      .contenedor-info-2 div img {
+        width: 100%;
+        height: 70%;
+        object-fit: contain; }
+  .img1 {
+    grid-area: img1; }
+  .img2 {
+    grid-area: img2; }
+  .img3 {
+    grid-area: img3; }
+  .contenedor-imgs {
+    display: grid;
+    grid-template-columns: repeat(2, 250px);
+    grid-auto-rows: 15.625rem;
+    gap: 10px;
+    grid-template-areas: "img1 img2" "img3 img3"; }
+    .contenedor-imgs .img3 {
+      justify-self: center;
+      align-self: center; }
+  /* Mates */
+  .contenedor-mates {
+    flex-direction: column;
+    height: 42rem; }
+    .contenedor-mates h2 {
+      padding: 3rem;
+      font-size: 6.5rem;
+      width: 100%;
+      height: 30%; }
+    .contenedor-mates img {
+      width: 100%;
+      height: 70%;
+      object-fit: cover; }
+  .card {
+    height: 15rem; }
+    .card img {
+      width: 15rem; }
+    .card .card-desc {
+      font-size: 1.75rem; } }
+
+@media (max-width: 833px) {
+  .contenedor-info h1 {
+    font-size: 6rem;
+    padding: .5rem; }
+  .contenedor-info h2 {
+    font-size: 2rem;
+    margin: 1rem;
+    width: 90%; }
+  .contenedor-info-2 div h2 {
+    font-size: 2rem; }
+  footer {
+    font-size: 1rem; }
+    footer .redes {
+      gap: 10px; }
+  /* Mates */
+  .contenedor-mates {
+    height: 100%; }
+    .contenedor-mates h2 {
+      font-size: 5.5rem; }
+    .contenedor-mates img {
+      object-fit: scale-down; }
+  .card {
+    height: 12rem; }
+    .card img {
+      width: 12rem; }
+    .card .card-desc {
+      font-size: 1.25rem; } }
+
+@media (max-width: 700px) {
+  .navbar {
+    height: 10rem; }
+    .navbar ul {
+      flex-direction: column; }
+  .portada {
+    display: none; }
+  .contenedor-info {
+    margin-top: 10rem; }
+    .contenedor-info h1 {
+      display: none; }
+    .contenedor-info h2 {
+      font-size: 1.5rem; }
+    .contenedor-info img {
+      height: 12rem;
+      object-fit: none;
+      overflow: hidden; }
+  .contenedor-imgs {
+    display: flex;
+    flex-direction: column;
+    gap: 10px; }
+    .contenedor-imgs img {
+      justify-self: center;
+      align-self: center;
+      width: 13rem;
+      height: 13rem; }
+  footer {
+    font-size: 0.75rem; }
+    footer .redes {
+      flex-direction: column; }
+    footer .icon {
+      width: 1.5rem;
+      height: 1.5rem; }
+  /* Mates */
+  .contenedor-mates {
+    margin-top: 10rem; }
+    .contenedor-mates h2 {
+      display: none; }
+  .cards {
+    height: 100%; }
+  .card {
+    flex-direction: column-reverse;
+    height: 100%;
+    gap: 1.25rem; }
+    .card img {
+      width: 15rem;
+      height: 15rem;
+      align-self: center;
+      justify-self: center; }
+    .card .card-desc {
+      margin-top: 0rem;
+      margin-left: 0rem; } }
+
+@media (max-width: 555px) {
+  .contenedor-info h1 {
+    font-size: 5rem; }
+  .contenedor-info h2 {
+    font-size: 1.5rem;
+    margin: 0.5rem; }
+  .contenedor-info-2 div h2 {
+    padding: 1.5rem; }
+  /* Mates */
+  .cards {
+    padding: 4rem; }
+  .card img {
+    width: 12rem;
+    height: 12rem; }
+  .card .card-desc {
+    margin-top: 2rem;
+    margin-left: 2rem;
+    font-size: 1rem; } }
+
+@media (max-width: 490px) {
+  .contenedor-info-2 {
+    height: 100%; }
+    .contenedor-info-2 div img {
+      object-fit: scale-down; }
+  /* Mates */
+  .card .card-desc {
+    margin-top: 0.5rem;
+    margin-left: 0.5rem; } }
+
+@media (max-width: 475px) {
+  .contenedor-info-2 div h2 {
+    padding: 1rem; }
+  /* Mates */
+  .cards {
+    padding: 3rem; } }
+
+@media (max-width: 375px) {
+  .navbar {
+    font-size: 1rem; }
+  .contenedor-info h2 {
+    font-size: 1rem; }
+  .contenedor-info-2 div h2 {
+    font-size: 1.25rem; }
+  .contenedor-imgs img {
+    width: 10rem;
+    height: 10rem; } }
