--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,14 @@
 body {
   background-color: #fae8d6; }
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0; }
+
+input[type=number] {
+  -moz-appearance: textfield; }
+
 b {
   color: #c67b48; }
 
