--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -7,3 +7,13 @@
 body {
 	background-color: $Paleta1;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button { 
+	-webkit-appearance: none; 
+	margin: 0; 
+}
+
+input[type=number] {
+	-moz-appearance:textfield;
+}
