--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0; }
 
 input[type=number] {
+  appearance: textfield;
   -moz-appearance: textfield; }
 
 b {
