--- a/scss/layout/media/_media1220.scss
+++ b/scss/layout/media/_media1220.scss
@@ -7,4 +7,22 @@
 			}
 		}
 	}
+
+	/* Tablas */
+	.tablas-info {
+		height: 30rem;
+		div {
+			p {
+				font-size: 3.5rem;
+				padding: 7rem;
+			}
+		}	
+	}
+
+	.galeria {
+		img {
+			width: 18.75rem;
+			height: 18.75rem;
+		}
+	}
 }
