--- a/scss/layout/media/_media375.scss
+++ b/scss/layout/media/_media375.scss
@@ -24,4 +24,42 @@
 			height: 10rem;
 		}
 	}
+
+	/* Historia */
+	.contenedor-info-historia {
+		padding: 2.5rem 1rem;
+		gap: 1.7rem;
+		img {
+			width: 10.375rem;
+			height: 13rem;
+		}
+		p {
+			font-size: 1rem;
+		}
+	}
+
+	/* Contacto */
+	.formulario {
+		padding: 1rem 1rem;
+		h2 {
+			font-size: 2rem;
+		}
+		form {
+			margin-top: 1.5rem;
+			gap: 0.5rem;
+			input {
+				height: 1.6rem;
+				width: 15rem;
+				font-size: 0.6rem;
+				padding: 0.3rem;
+			}
+			button {
+				width: 1rem;
+				height: 1rem;
+				bottom: 1.8rem;
+				left: 6.3rem;
+			}
+		}
+	}
+
 }
