--- a/scss/layout/media/_media700.scss
+++ b/scss/layout/media/_media700.scss
@@ -78,5 +78,61 @@
 		}
 	}
 
+	/* Tablas */
+	.contenedor-titulo-tablas {
+		display: none;
+	}
 
+	.tablas-info {
+		margin-top: 10rem;
+		height: 43.75rem;
+		div {
+			flex-direction: column;
+			img {
+				width: 100%;
+				height: 80%;
+			}
+			p {
+				width: 100%;
+				height: 20%;
+				font-size: 1.9rem;
+				padding: 1.5rem;
+			}
+		}
+	}
+
+	.galeria {
+		img:nth-child(2) {
+			display: none;
+		}
+	}
+
+	/* Historia */
+	.contenedor-info-historia {
+		margin-top: 10rem;
+		padding: 5rem 2.5rem;
+		gap: 3rem;
+		img {
+			width: 13rem;
+			height: 16.25rem;
+		}
+		p {
+			font-size: 1.5rem;
+		}
+	}
+
+	/* Contacto */
+	.formulario {
+		margin-top: 10rem;
+		padding: 4rem 4rem;
+		h2 {
+			font-size: 4rem;
+		}
+		form {
+			gap: 1.7rem;
+			button {
+				bottom: 4.5rem;
+			}
+		}
+	}
 }
