--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,25 @@ input[type=number] {
 b {
   color: #c67b48; }
 
+b {
+  animation-name: titulo;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-duration: 4s;
+  animation-delay: 1s; }
+
+@keyframes titulo {
+  0% {
+    color: #c67b48; }
+  25% {
+    color: #ab9c89; }
+  45% {
+    color: #cbd9b7; }
+  85% {
+    color: #d3b59e; }
+  100% {
+    color: #c67b48; } }
+
 .navbar {
   background-color: #c67b48;
   height: 5rem;
@@ -116,6 +135,10 @@ b {
     width: 15.625rem;
     height: 15.625rem;
     border-radius: 50%; }
+    .contenedor-imgs img:hover {
+      transform: scale(1.3);
+      border-radius: 0%;
+      transition: border-radius 2s ease 2ms, transform 2s cubic-bezier(0.17, 1.09, 0.94, -0.45) 2ms; }
 
 .contenedor-mates {
   margin-top: 5rem;
