--- a/scss/layout/_mainIndex.scss
+++ b/scss/layout/_mainIndex.scss
@@ -69,5 +69,10 @@
 		width: 15.625rem;
 		height: 15.625rem;
 		border-radius: 50%;
+		&:hover {
+			transform: scale(1.3);
+			border-radius: 0%;
+			transition: border-radius 2s ease 2ms, transform 2s cubic-bezier(.17,1.09,.94,-0.45) 2ms;
+		}
 	}
 }
