--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ b {
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
+  flex-direction: row;
   justify-content: flex-end;
   align-items: center; }
   .portada p {
@@ -91,6 +92,7 @@ b {
 
 .contenedor-info {
   background-color: rgba(203, 217, 183, 0.42);
+  display: flex;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -145,6 +147,7 @@ b {
   background-color: #cbd9b7;
   height: 20.375rem;
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center; }
   .contenedor-mates h2 {
@@ -161,8 +164,10 @@ b {
   height: 71.875rem;
   display: flex;
   flex-direction: column;
-  padding: 5rem;
-  gap: 2.5rem; }
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 2.5rem;
+  padding: 5rem; }
 
 /* Tablas */
 .contenedor-titulo-tablas {
@@ -170,6 +175,7 @@ b {
   background-color: #cbd9b7;
   height: 20.375rem;
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center; }
   .contenedor-titulo-tablas h2 {
@@ -195,8 +201,9 @@ b {
       padding: 8.5rem; }
 
 .galeria {
-  display: flex;
   padding: 5rem 5rem;
+  display: flex;
+  flex-direction: row;
   justify-content: space-evenly;
   align-items: center; }
   .galeria img {
@@ -216,6 +223,39 @@ b {
     .galeria button img {
       width: 100%;
       height: 100%; }
+
+.tabla-1, .tabla-2, .tabla-3 {
+  animation-name: test;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-duration: 9s;
+  animation-delay: 0s; }
+
+@keyframes test {
+  0% {
+    box-shadow: 0px 0px 0px 0px white;
+    scale: 1; }
+  10% {
+    box-shadow: 0px 0px 10px 10px white;
+    scale: 1.1; }
+  20% {
+    box-shadow: 0px 0px 20px 20px white;
+    scale: 1.2; }
+  30% {
+    box-shadow: 0px 0px 10px 10px white;
+    scale: 1.1; }
+  40% {
+    box-shadow: 0px 0px 0px 0px white;
+    scale: 1; }
+  100% {
+    box-shadow: 0px 0px 0px 0px white;
+    scale: 1; } }
+
+.tabla-2 {
+  animation-delay: 3s; }
+
+.tabla-3 {
+  animation-delay: 6s; }
 
 /* Historia */
 .contenedor-info-historia {
@@ -280,15 +320,21 @@ footer {
   background-color: rgba(198, 123, 72, 0.35);
   height: 6.5rem;
   display: flex;
+  flex-direction: row;
   justify-content: space-around;
   align-items: center;
   font-size: 1.25rem;
   font-family: 'Inter'; }
   footer .redes {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: start;
     gap: 30px; }
     footer .redes div {
       display: flex;
+      flex-direction: row;
+      justify-content: center;
       align-items: center;
       gap: 10px; }
   footer .icon {
@@ -357,9 +403,11 @@ footer {
   .contenedor-imgs {
     display: grid;
     grid-template-columns: repeat(2, 250px);
-    grid-auto-rows: 15.625rem;
-    gap: 10px;
-    grid-template-areas: "img1 img2" "img3 img3"; }
+    grid-template-rows: 15.625rem;
+    justify-content: center;
+    align-content: center;
+    grid-template-areas: "img1 img2" "img3 img3";
+    gap: 10px; }
     .contenedor-imgs .img3 {
       justify-self: center;
       align-self: center; }
@@ -456,7 +504,7 @@ footer {
     .tablas-info div p {
       font-size: 2.6rem;
       padding: 3rem; }
-  .galeria img:nth-child(3) {
+  .tabla-3 {
     display: none; } }
 
 @media (max-width: 700px) {
@@ -527,7 +575,7 @@ footer {
         height: 20%;
         font-size: 1.9rem;
         padding: 1.5rem; }
-  .galeria img:nth-child(2) {
+  .tabla-2 {
     display: none; }
   /* Historia */
   .contenedor-info-historia {
@@ -645,6 +693,7 @@ footer {
 
 @media (max-width: 375px) {
   .navbar {
+    font-size: 1rem;
     font-size: 1rem; }
   .contenedor-info h2 {
     font-size: 1rem; }
