--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,17 +1,14 @@
 .navbar {
 	background-color: $Paleta3;
 	height: 5rem;
-	font-size: 2rem;
+	font-size: map-get($font-size, lg);
 	font-family: inter;
 	position: fixed;
 	width: 100%;
 	top:0;
 	ul {
 		list-style: none;
-		display: flex;
-		flex-direction: row;
-		justify-content: space-evenly;
-		align-items: center;
+		@include flex(row,space-evenly,center);
 		width: 100%;
 		height: 100%;
 		li {
