--- a/scss/layout/_mainIndex.scss
+++ b/scss/layout/_mainIndex.scss
@@ -4,9 +4,7 @@
 	background-image: url("../assets/portada.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
-	display: flex;
-	justify-content: flex-end;
-	align-items: center;
+	@include flex(row,flex-end,center);
 	p {
 		font-size: 8rem;
 		font-family: 'David Libre';
@@ -18,9 +16,7 @@
 .contenedor-info {
 	background-color: $Paleta5_2;
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	@include flex(column,center,center);
 	h1 {
 		font-size: 8rem;
 		font-family: 'Island Moments';
