--- a/scss/layout/_mainMates.scss
+++ b/scss/layout/_mainMates.scss
@@ -2,9 +2,7 @@
 	margin-top: 5rem;
 	background-color: $Paleta5;
 	height: 20.375rem;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	@include flex(row,center,center);
 	h2 {
 		width: 60%;
 		height: 50%;
@@ -20,8 +18,7 @@
 
 .cards {
 	height: 71.875rem;
-	display: flex;
-	flex-direction: column;
-	padding: 5rem;
+	@include flex(column,flex-start,flex-start);
 	gap: 2.5rem;
+	padding: 5rem;
 }
