--- a/scss/layout/_mainTablas.scss
+++ b/scss/layout/_mainTablas.scss
@@ -3,9 +3,7 @@
 	margin-top: 5rem;
 	background-color: $Paleta5;
 	height: 20.375rem;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	@include flex(row,center,center);
 	h2 {
 		font-family: 'Island Moments';
 		font-size: 8rem;
@@ -36,10 +34,8 @@
 }
 
 .galeria {
-	display: flex;
 	padding: 5rem 5rem;
-	justify-content: space-evenly;
-	align-items: center;
+	@include flex(row,space-evenly,center);
 	img {
 		width: 21.875rem;
 		height: 21.875rem;
@@ -60,4 +56,54 @@
 			height: 100%;
 		}
 	}
+}
+
+.tabla-1 {
+	animation-name: test;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+	animation-duration: 9s;
+	animation-delay: 0s;
+}
+
+@keyframes test {
+	0% {
+		box-shadow: 0px 0px 0px 0px white;
+		scale: (1);
+	}
+
+	10% {
+		box-shadow: 0px 0px 10px 10px white;
+		scale: (1.1);
+	}
+
+	20% {
+		box-shadow: 0px 0px 20px 20px white;
+		scale: (1.2);
+	}
+
+	30% {
+		box-shadow: 0px 0px 10px 10px white;
+		scale: (1.1);
+	}
+
+	40% {
+		box-shadow: 0px 0px 0px 0px white;
+		scale: (1);
+	}
+
+	100% {
+		box-shadow: 0px 0px 0px 0px white;
+		scale: (1);
+	}
+}
+
+.tabla-2 {
+	@extend .tabla-1;
+	animation-delay: 3s;
+}
+
+.tabla-3 {
+	@extend .tabla-1;
+	animation-delay: 6s;
 }
