--- a/scss/base/_typografias.scss
+++ b/scss/base/_typografias.scss
@@ -15,16 +15,8 @@ b {
 		color: $Paleta3;
 	}
 
-	25% {
-		color: $Paleta4;
-	}
-
-	45% {
-		color: $Paleta5;
-	}
-
-	85% {
-		color: $Paleta2;
+	50% {
+		color: rgb(0,0,0);
 	}
 
 	100% {
