--- a/scss/layout/media/_media1024.scss
+++ b/scss/layout/media/_media1024.scss
@@ -59,7 +59,7 @@
 			align-self: center;
 		}
 	}
-	
+
 	/* Mates */
 	.contenedor-mates {
 		flex-direction: column;
@@ -126,6 +126,7 @@
 	/* Contacto */
 	.formulario {
 		padding: 5rem 5rem;
+		margin-bottom: 2.5rem;
 		h2 {
 			font-size: 4.5rem;
 		}
