--- a/scss/layout/media/_media555.scss
+++ b/scss/layout/media/_media555.scss
@@ -69,11 +69,14 @@
 	/* Contacto */
 	.formulario {
 		padding: 3rem 3rem;
+		height: 65vh;
 		h2 {
 			font-size: 3.2rem;
+			//margin-top: 2rem;
 		}
 		form {
 			gap: 1.4rem;
+			//margin-bottom: 2rem;
 			input {
 				height: 2.625rem;
 				width: 21.625rem;
